# crud_fast_api

./: .env.example  criar_tabelas.py  docker-compose.yml  main.py  pyproject.toml
.docker/postgres/: Dockerfile
api/v1/: api.py
api/v1/endpoints/: curso.py
core/: configs.py  database.py
models/: curso_model.py
schemas/: curso_schema.py
