[tool.poetry]
name = "crud-fast-api"
version = "0.1.0"
description = ""
authors = ["Victor Augusto <augusto.van@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.115.6"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.4"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
