[tool.poetry]
name = "crud-fastapi-sqlmodel"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <augusto.van@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.115.6"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
sqlmodel = "^0.0.22"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
